tests/duarouter/errors/unknown_vType_ignore/errors.duarouter
Warning: The vehicle type 'foo' for vehicle '0' is not known.
